--- a/quinzena3/bugfixes/exercicio-bugfixes/index.css
+++ b/quinzena3/bugfixes/exercicio-bugfixes/index.css
@@ -55,6 +55,7 @@ div img {
     text-align: center;
 }
 
+
 .icone {
     height: 15px;
 }
@@ -99,6 +100,7 @@ div:last-child {
 
 table {
     width: 60%;
+    text-align: center;
 }
 
 td button {
