--- a/quinzena3/bugfixes/exercicio-bugfixes/index.css
+++ b/quinzena3/bugfixes/exercicio-bugfixes/index.css
@@ -103,6 +103,11 @@ table {
     text-align: center;
 }
 
+#imagem1,#imagem2,#imagem3 {
+    width: 40px;
+    height: 40px;
+}
+
 td button {
     background-color: #fadf63;
     width: 150px;
