Arrumei a borda adicionando um id ao input e depois estilizando o mesmo com border top,right e left como hidden e com a border bottom com a cor preta.

--- a/quinzena3/bugfixes/exercicio-bugfixes/index.css
+++ b/quinzena3/bugfixes/exercicio-bugfixes/index.css
@@ -137,3 +137,10 @@ td button {
 #back-button:hover {
     background-color: #635a3d
 }
+
+#input-de-busca {
+    border-top: hidden;
+    border-bottom: 1px solid black;
+    border-left: hidden;
+    border-right: hidden;
+}
